--- a/AuNote/MainWindow.xaml
+++ b/AuNote/MainWindow.xaml
@@ -21,8 +21,8 @@
         <RowDefinition Height="Auto" MinHeight="10"></RowDefinition>
       </Grid.RowDefinitions>
       <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center">Search:</TextBlock>
-      <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding SearchText}" TextChanged="{Binding }"></TextBox>
-      <Button Grid.Column="2" Grid.Row="0">New note</Button>
+      <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding SearchText UpdateSourceTrigger=PropertyChanged}" ></TextBox>
+      <Button Grid.Column="2" Grid.Row="0" Command="{Binding AddNoteCommand}" >New note</Button>
     </Grid>
     <ListView Name="LvNotes" Margin="5" VerticalAlignment="Stretch" ItemsSource="{Binding NoteHeaders}" >
       <ListView.View>
