--- a/AuNote/MainWindow.xaml
+++ b/AuNote/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AuNote"
         mc:Ignorable="d"
+        DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
         Title="MainWindow" Height="350" Width="525">
   <StackPanel VerticalAlignment="Stretch">
     <Grid VerticalAlignment="Stretch">
@@ -21,7 +22,7 @@
         <RowDefinition Height="Auto" MinHeight="10"></RowDefinition>
       </Grid.RowDefinitions>
       <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center">Search:</TextBlock>
-      <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding SearchText UpdateSourceTrigger=PropertyChanged}" ></TextBox>
+      <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" ></TextBox>
       <Button Grid.Column="2" Grid.Row="0" Command="{Binding AddNoteCommand}" >New note</Button>
     </Grid>
     <ListView Name="LvNotes" Margin="5" VerticalAlignment="Stretch" ItemsSource="{Binding NoteHeaders}" >
