--- a/AspNetPim/Views/ViewEdit/ViewEdit.cshtml
+++ b/AspNetPim/Views/ViewEdit/ViewEdit.cshtml
@@ -11,9 +11,7 @@
 {
     var config = {
     mainFormSelector: '#mainForm',
-    createNoteUrl: '@Url.Action("Create", "Home")',
-    deleteNoteUrl: '@Url.Action("DeleteNote", "Home")',
-    updateNoteUrl: '@Url.Action("Update", "Home")',
+    updateNoteUrl: '@Url.Action("Update")',
     createNoteButtonSelector: '#btnSubmit',
     newNoteTextSelector: '#@Html.IdFor(m => m.NoteText)',
     deleteNoteButtonSelector: '#btnDelete',
