--- a/AspNetPim/Views/ViewEdit/ViewEdit.cshtml
+++ b/AspNetPim/Views/ViewEdit/ViewEdit.cshtml
@@ -25,5 +25,5 @@
 }
     
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Back to List", "Index", "Home")
     </div>
