WIP: search page, deleting from it unfinished and interrupted. about to handle deletion via ajax post

--- a/AspNetPim/Views/ViewEdit/ViewEdit.cshtml
+++ b/AspNetPim/Views/ViewEdit/ViewEdit.cshtml
@@ -25,5 +25,5 @@
 }
     
     <div>
-        @Html.ActionLink("Back to List", "Index", "Home")
+        @Html.ActionLink("Back to home page", "Index", "Home")
     </div>
