--- a/AspNetPim/Views/Home/IndexPartial.cshtml
+++ b/AspNetPim/Views/Home/IndexPartial.cshtml
@@ -20,21 +20,6 @@
         </h3>
 
         <div class="">
-            @foreach (var note in Model.LastUpdatedNotes)
-            {
-                <div class="row form-group">
-                    @Html.Hidden("noteId", note.Id)
-                    <div note-name class="col-md-10">
-                        <a note-name href="@Url.Action("Index", "ViewEdit", new {id = note.Id})">
-                            @note.Name
-                        </a>
-                        <br />
-                        @HomeViewModel.GetNoteTextSummary(note)
-                    </div>
-                    <div class="col-md-2">
-                        <button delete-note-by-id class="btn btn-warning pull-right">Delete</button>
-                    </div>
-                </div>
-            }
+            @Html.Partial("NoteList", Model.LastUpdatedNotes)
         </div>
     }
