--- a/AspNetPim/Views/Shared/_Layout.cshtml
+++ b/AspNetPim/Views/Shared/_Layout.cshtml
@@ -23,8 +23,20 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
+
+                @using (Html.BeginForm("Search", "Search", FormMethod.Get, new {@class = "", style= "display: inline-block; margin-left: 15%; margin-top: 10px; width: 40%" }))
+                {
+                    <div class="input-group" style="width: 95%">
+                        @Html.TextBox("query", null, new {id = "tbQuery", @class = "form-control input-sm", style = "background-color: lightgray;" })
+                        <div class="input-group-btn">
+                            <button type="submit" class="btn input-sm">
+                                <i class="glyphicon glyphicon-search"></i>
+                            </button>
+                        </div>
+                    </div>
+                }
+
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
