--- a/AspNetPim/Views/Account/UserRoles.cshtml
+++ b/AspNetPim/Views/Account/UserRoles.cshtml
@@ -15,7 +15,8 @@
         @Html.ValidationSummary(true)
         <div class="form-group">
             <div class="col-md-10">
-                @Html.HiddenFor(model => model.UserName)
+                @*Html.HiddenFor(model => model.UserName)*@
+                @Html.HiddenFor(m => m.UserId)
             </div>
         </div>
 
