Upgraded bootstrap, jquery. Purged unused autogenerated code. Optimized navbar layout

--- a/AspNetPim/Views/Account/Manage.cshtml
+++ b/AspNetPim/Views/Account/Manage.cshtml
@@ -1,23 +1,38 @@
-﻿@using Microsoft.AspNet.Identity;
+﻿@model IEnumerable<AspNetPim.Models.EditUserViewModel>
+
 @{
-    ViewBag.Title = "Manage Account";
+    ViewBag.Title = "Manage users";
 }
 
-<h2>@ViewBag.Title.</h2>
+<p>
+    @Html.ActionLink("Create New", "Register") 
+</p>
 
-<p class="text-success">@ViewBag.StatusMessage</p>
-<div class="row">
-    <div class="col-md-12">
-        @if (ViewBag.HasLocalPassword)
-        {
-            @Html.Partial("_ChangePasswordPartial")
-        }
-        else
-        {
-            @Html.Partial("_SetPasswordPartial")
-        }
-    </div>
-</div>
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Email)
+        </th>
+        <th></th>
+    </tr>
+
+    @foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id, name = item.Name }) |
+                @Html.ActionLink("Roles", "UserRoles", new { id = item.Id, name = item.Name }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id, name = item.Name })
+            </td>
+        </tr>
+    }
+
+</table>
