--- a/AspNetPim/Views/ViewEdit/ViewEdit.cshtml
+++ b/AspNetPim/Views/ViewEdit/ViewEdit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = Model.Note?.Name ?? "Unsaved note";
+    ViewBag.ShowPageCaption = false;
 }
 
 @Html.Partial("ViewEditPartial", Model)
