--- a/AspNetPim/Views/Account/Delete.cshtml
+++ b/AspNetPim/Views/Account/Delete.cshtml
@@ -4,9 +4,8 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
 <h3>Are you sure you want to delete this?</h3>
+
 <div>
     <h4>Edit User</h4>
     <hr />
@@ -35,7 +34,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "Manage")
         </div>
     }
 </div>
