--- a/AspNetPim/Views/Account/Edit.cshtml
+++ b/AspNetPim/Views/Account/Edit.cshtml
@@ -1,32 +1,32 @@
-﻿@model AspNetPim.Models.EditUserViewModel
+﻿@using Microsoft.AspNet.Identity
+@model AspNetPim.Models.EditUserViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = $"Edit {User.Identity.GetUserName()} account";
 }
-
-<h2>Edit</h2>
-
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>EditUserViewModel</h4>
-        <hr />
         @Html.ValidationSummary(true)
         <div class="form-group">
             @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name)
+            <div class="col-md-5">
+                @Html.TextBoxFor(model => model.Name, new { @class = "form-control email" })
+            </div>
+            <div class="col-md-5 form-control-static text-danger">
                 @Html.ValidationMessageFor(model => model.Name)
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email)
+            <div class="col-md-5">
+                @Html.TextBoxFor(model => model.Email, new {@class = "form-control email"})
+            </div>
+            <div class="col-md-5 form-control-static text-danger">
                 @Html.ValidationMessageFor(model => model.Email)
             </div>
         </div>
@@ -40,9 +40,6 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Manage")
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
