--- a/AspNetPim/Views/Account/_ChangePasswordPartial.cshtml
+++ b/AspNetPim/Views/Account/_ChangePasswordPartial.cshtml
@@ -2,14 +2,10 @@
 @using Microsoft.AspNet.Identity
 @model AspNetPim.Models.ManageUserViewModel
 
-<p>You're logged in as <strong>@User.Identity.GetUserName()</strong>.</p>
-
-@using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("ChangePassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
-    <hr />
-    @Html.ValidationSummary()
+    @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
