--- a/AspNetPim/Views/Home/About.cshtml
+++ b/AspNetPim/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
+
 <h3>@ViewBag.Message</h3>
 
-<p>MegaPatam notes with fulltext search powered by Apache Lucene.</p>
+<p>Simple text notes storage with fulltext search powered by Apache Lucene.</p>
