--- a/AspNetPim/Views/Shared/EditorTemplates/SelectRoleEditorViewModel.cshtml
+++ b/AspNetPim/Views/Shared/EditorTemplates/SelectRoleEditorViewModel.cshtml
@@ -1,10 +1,7 @@
 ﻿@model AspNetPim.Models.SelectRoleEditorViewModel
-@Html.HiddenFor(model => model.RoleName)
-<tr>
-    <td style="text-align:center">
-        @Html.CheckBoxFor(model => model.Selected)
-    </td>
-    <td style="padding-right:20px">
-        @Html.DisplayFor(model => model.RoleName)
-    </td>
-</tr>
+
+<div>
+    @Html.HiddenFor(model => model.RoleName, new { @keyholder = "" })
+    @Html.CheckBoxFor(m => m.Selected, new { @class = "checkbox-inline" })
+    @Html.DisplayFor(model => model.RoleName, new { @class = "control-label" })
+</div>
