--- a/AspNetPim/Views/Home/About.cshtml
+++ b/AspNetPim/Views/Home/About.cshtml
@@ -5,3 +5,15 @@
 <h3>@ViewBag.Message</h3>
 
 <p>Simple text notes storage with fulltext search powered by Apache Lucene.</p>
+<br/>
+
+<p>
+    Access to notes is granted to authenticated users in 'Reader' and 'Writer' roles.
+    Users can create accounts for themselves, but a member of 'Admin' role has to assign roles to them before they can view or change data.
+    At the start a default 'admin' account is created with password 'password'. It is recommended to change the password immediately
+    by clicking on the user name in the top right corner of the page.
+</p>
+
+<p>
+    Search is available from any page via text box in the top navigation bar.
+</p>
