--- a/AspNetPim/Views/Account/Edit.cshtml
+++ b/AspNetPim/Views/Account/Edit.cshtml
@@ -10,11 +10,10 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        @Html.ValidationSummary(true)
         <div class="form-group">
             @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
             <div class="col-md-5">
-                @Html.TextBoxFor(model => model.Name, new { @class = "form-control email" })
+                @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
             </div>
             <div class="col-md-5 form-control-static text-danger">
                 @Html.ValidationMessageFor(model => model.Name)
@@ -24,7 +23,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
             <div class="col-md-5">
-                @Html.TextBoxFor(model => model.Email, new {@class = "form-control email"})
+                @Html.TextBoxFor(model => model.Email, new {@class = "form-control"})
             </div>
             <div class="col-md-5 form-control-static text-danger">
                 @Html.ValidationMessageFor(model => model.Email)
