WIP fixing notes deletion from list; autoAjax upgrade; deletion works from home's recent list

--- a/AspNetPim/Views/Home/Index.cshtml
+++ b/AspNetPim/Views/Home/Index.cshtml
@@ -24,7 +24,9 @@
         newNoteTextSelector: '#@Html.IdFor(m => m.NewNoteText)',
         deleteNoteButtonSelector: '[delete-note-by-id]',
         openNoteLinkSelector: '#formMessages',
-        divInProgressSelector: '#progressIndicator',
+    divInProgressSelector: '#progressIndicator',
+    buttonAttributeNameNoteId: "noteId",
+    divNoteListSelector: "#divNoteList",
     };
 
     (pim.pages.latestAndCreate)
