--- a/AspNetPim/Views/Home/IndexPartial.cshtml
+++ b/AspNetPim/Views/Home/IndexPartial.cshtml
@@ -14,11 +14,13 @@
         </div>
     </div>
 
-    <h3>
-        Recent notes
-    </h3>
 
-    <div class="">
-        @Html.Partial("NoteList", Model.LastUpdatedNotes)
-    </div>
 }
+
+<h3>
+    Recent notes
+</h3>
+
+<div id="divNoteList" class="">
+    @Html.Partial("NoteList", Model.LastUpdatedNotes)
+</div>
