--- a/AspNetPim/Views/Shared/NoteList.cshtml
+++ b/AspNetPim/Views/Shared/NoteList.cshtml
@@ -4,7 +4,6 @@
 @foreach (var note in Model)
 {
     <div class="row form-group">
-        @Html.Hidden("noteId", note.Id)
         <div note-name class="col-md-10">
             <a note-name href="@Url.Action("Index", "ViewEdit", new {id = note.Id})">
                 @note.Name
@@ -13,8 +12,7 @@
             @HomeViewModel.GetNoteTextSummary(note)
         </div>
         <div class="col-md-2">
-            <input delete-note-by-id type="submit" class="btn btn-warning pull-right" value="Delete"/>
+            <input delete-note-by-id type="submit" class="btn btn-warning pull-right" noteId="@note.Id" value="Delete"/>
         </div>
     </div>
 }
-
