fixed deletion from search page

--- a/AspNetPim/Views/Search/Search.cshtml
+++ b/AspNetPim/Views/Search/Search.cshtml
@@ -12,6 +12,8 @@
     deleteNoteUrl: '@Url.Action("Delete")',
     deleteNoteButtonSelector: '[delete-note-by-id]',
     divInProgressSelector: '#progressIndicator',
+    buttonAttributeNameNoteId: "noteId",
+    divNoteListSelector: "#divNoteList",
     };
 
     (pim.pages.search)
