Added time period filter to search

--- a/AspNetPim/Views/Search/Search.cshtml
+++ b/AspNetPim/Views/Search/Search.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Search";
 }
 
-@Html.Partial("SearchPartial", Model)
+@Html.Partial("SearchPartial", Model, ViewData)
 
 @section Init
 {
