--- a/AspNetPim/Content/Site.css
+++ b/AspNetPim/Content/Site.css
@@ -27,3 +27,15 @@ textarea {
     display: inline;
     margin-left: 10px;
 }
+
+input.input-validation-error {
+    border: 1px solid red;
+}
+
+div.validation-summary-errors {
+    color: red;
+}
+
+.field-validation-error {
+    color: red;
+}
