--- a/AspNetPim/Views/Search/SearchPartial.cshtml
+++ b/AspNetPim/Views/Search/SearchPartial.cshtml
@@ -2,25 +2,33 @@
 
 @using (Html.BeginForm("Search", "Search", FormMethod.Get, new {id = "mainForm", @class = "form-horizontal"}))
 {
-    <div class="input-group col-md-offset-1 col-md-10">
-        @Html.TextBoxFor(m => m.Query, new {id = "tbQuery", @class = "form-control"})
-        <div class="input-group-btn">
-            <button type="submit" class="btn">
-                <i class="glyphicon glyphicon-search"></i>
-            </button>
+    <div class="form-group">
+        <div class="input-group col-md-offset-1 col-md-10">
+            @Html.TextBoxFor(m => m.Query, new {id = "tbQuery", @class = "form-control"})
+            <div class="input-group-btn">
+                <button type="submit" class="btn">
+                    <i class="glyphicon glyphicon-search"></i>
+                </button>
+            </div>
         </div>
     </div>
-    <br />
     <div class="form-group">
-        @Html.Label("Period", new {@class = "col-md-1 control-label"})
-        <div class="col-md-2">
-            @Html.TextBoxFor(m => m.PeriodStart, new {@class = "form-control", type = "date"})
-        </div>
-        <div class="col-md-2">
-            @Html.TextBoxFor(m => m.PeriodEnd, new { @class = "form-control", type = "date" })
-        </div>
-        <div class="col-md-7 form-control-static">
-            @Html.ValidationMessageFor(m => m.PeriodEnd)
+        <div class="col-md-offset-1 col-md-10">
+            <div class="form-inline">
+                <div class="form-group">
+                    <div class="col-lg-12">
+                        @Html.Label("Last update time from")
+                        @Html.TextBoxFor(m => m.PeriodStart, new {@class = "form-control datepicker", placeholder = "Optional"})
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-lg-12">
+                        @Html.Label("to")
+                        @Html.TextBoxFor(m => m.PeriodEnd, new {@class = "form-control datepicker", placeholder = "Optional" })
+                        @Html.ValidationMessageFor(m => m.PeriodEnd)
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
