--- a/PimWeb/Pages/Home/IndexPartial.cshtml
+++ b/PimWeb/Pages/Home/IndexPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model AspNetPim.Models.HomeViewModel
+﻿@model PimWeb.Models.HomeViewModel
 
 @* @using (Html.BeginForm("Create", "Home", FormMethod.Post, new { id = "mainForm", @class = "form-horizontal"})) *@
 @* { *@
