--- a/PimWeb/Pages/Search/SearchPartial.cshtml
+++ b/PimWeb/Pages/Search/SearchPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model AspNetPim.Models.SearchViewModel
+﻿@model PimWeb.Models.SearchViewModel
 @* *@
 @* @using (Html.BeginForm("Search", "Search", FormMethod.Get, new {id = "mainForm", @class = "form-horizontal"})) *@
 @* { *@
